tests/bad/enum_method_with_same_name.ae
/// fail: Enum value with this name already exists

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def Variable::Integer() {}
